@@ -65,7 +65,6 @@ its tt(streambuf). Since the class's data members are not initialized before
 the class's base class has been constructed, tt(d_filebuf) can only be
 initialized thereafter. By then, the tt(filebuf) is only available as
 tt(rdbuf), returning a tt(streambuf). However, as it is actually a
-tt(filebuf), a tt(reinterpret_cast) is used to cast the tt(streambuf) pointer
-returned by tt(rdbuf) to tt(a filebuf *), so tt(d_filebuf) can be
-initialized:
+tt(filebuf), a tt(static_cast) is used to cast the tt(streambuf) pointer
+returned by tt(rdbuf) to tt(a filebuf *), so tt(d_filebuf) can be initialized:
         verbinsert(CONS2)(examples/fistream/fistream.cc)
