@@ -44,7 +44,7 @@ pointer's type.
 
     If the actual type of the object pointed to by a pointer is known, an
 explicit type cast can be used to access the full set of member functions
-that are available for the object: hi(reinterpret_cast)
+that are available for the object: hi(static_cast)
         verb(
     Truck truck;
     Vehicle *vp;
@@ -53,10 +53,10 @@ that are available for the object: hi(reinterpret_cast)
 
     Truck *trp;
 
-    trp = reinterpret_cast<Truck *>(vp);
+    trp = static_cast<Truck *>(vp);
     cout << "Make: " << trp->name() << '\n';
         )
     Here, the second to last statement specifically casts a tt(Vehicle *)
-variable to a tt(Truck *). As usual (with type casts), this code
+variable to a tt(Truck *). As usual (when using casts), this code
 is not without risk. It em(only) works  if tt(vp) really points to a
 tt(Truck). Otherwise the program may produce unexpected results.
