@@ -58,9 +58,9 @@ implemented like this:
         verb(
     int compareFunction(void const *p1, void const *p2)
     {
-        return *reinterpret_cast<Person const *>(p1)    // lsearch wants 0
-                !=                                      // for equal objects
-                *reinterpret_cast<Person const *>(p2);
+        return *static_cast<Person const *>(p1)     // lsearch wants 0
+                !=                                  // for equal objects
+                *static_cast<Person const *>(p2);
     }
         )
     This, of course, assumes that the ti(operator!=) has been overloaded in
