@@ -74,7 +74,7 @@ part of the example the (overloaded) tt(operator new) is used:
     String *sp = new String;                // This statement is implemented
                                             // as follows:
 
-        String *sp = reinterpret_cast<String *>(            // allocation
+        String *sp = static_cast<String *>(            // allocation
                         String::operator new(sizeof(String))
                      );
         String::String(sp);                                 // initialization
