@@ -91,13 +91,11 @@ derived class may be modified instead. Code receiving a base class pointer or
 reference may then perform a dynamic cast to the derived class to access the
 derived class's functionality.
 
-One may wonder what the difference is between a tt(dynamic_cast) and a
-tt(reinterpret_cast). One of the differences is of course that the
-tt(dynamic_cast) can operate on references while the tt(reinterpret_cast) can
-only operate on pointers. But is there a difference when both arguments are
-pointers?
+You may wonder in what way the behavior of the tt(dynamic_cast) differs from
+that of the tt(static_cast).
 
-When the tt(reinterpret_cast) is used, we tell the compiler that it literally
+///////////////
+When the tt(static_cast) is used, we tell the compiler that it literally
 should re-interpret a block of memory as something else. A reinterpret cast
 could be used to access the individual bytes of an tt(int). An tt(int)
 consists of tt(sizeof(int)) bytes, and these bytes can be accessed by
