@@ -44,8 +44,8 @@ classless wrapper function like the following may be used profitably:
         return
             Person::compare
             (
-                reinterpret_cast<Person const *const *>(p1),
-                reinterpret_cast<Person const *const *>(p2)
+                static_cast<Person const *const *>(p1),
+                static_cast<Person const *const *>(p2)
             );
     }
         )
