@@ -1,6 +1,8 @@
 This section is modified when the first or second part of the version number
 changes (and sometimes for the third part as well).
     itemization(
+    it() Version 9.3.0 refines the coverage of the tt(static_cast) and
+tt(reinterpret_cast), following a suggestion provided by Gido Schoenmacker.
     it() There are two major differences between versions 9.2.0 and 
 9.1.0. First, unrestricted unions are covered in more detail (cf. section
 ref(UNIONS)). Second, by now url(flexc++)(http://flexcpp.org/) has been
