@@ -1,3 +1,9 @@
+C++-annotations (9.3.0)
+
+  * Coverage of the static_cast and reinterpret_cast was refined, following a
+    suggestion provided by Gido Schoenmacker.
+
+
 C++-annotations (9.2.1)
 
   * Starting this release all release tags (using names that are identical to
